--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ apply plugin: 'groovy'
 // Apply the application plugin to add support for building an application
 apply plugin: 'application'
 
+apply plugin: 'idea'
+idea {
+    module {
+        outputDir file('build/classes/main')
+        testOutputDir file('build/classes/test')
+    }
+}
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
